# services/kepegawaian/modules/riwayatkenaikangajiberkala/entity.go
@@ -1,12 +1,29 @@
 package riwayatkenaikangajiberkala
 
-import "gitlab.com/wartek-id/matk/nexus/nexus-be/lib/db"
+import (
+	"github.com/jackc/pgx/v5/pgtype"
+
+	"gitlab.com/wartek-id/matk/nexus/nexus-be/lib/db"
+)
 
 type riwayatKenaikanGajiBerkala struct {
-	ID        int64   `json:"id"`
-	TMTKGB    db.Date `json:"tmt_kgb"`
-	NoSK      string  `json:"no_sk"`
-	TglSK     db.Date `json:"tgl_sk"`
-	GolRuang  string  `json:"gol_ruang"`
-	GajiPokok string  `json:"gaji_pokok"`
+	ID                     int64       `json:"id"`
+	IDGolongan             int32       `json:"id_golongan"`
+	NamaGolongan           string      `json:"nama_golongan"`
+	NamaGolonganPangkat    string      `json:"nama_golongan_pangkat"`
+	TMTGolongan            db.Date     `json:"tmt_golongan"`
+	MasaKerjaGolonganTahun pgtype.Int2 `json:"masa_kerja_golongan_tahun"`
+	MasaKerjaGolonganBulan pgtype.Int2 `json:"masa_kerja_golongan_bulan"`
+	NomorSK                string      `json:"nomor_sk"`
+	TanggalSK              db.Date     `json:"tanggal_sk"`
+	TMTKenaikanGajiBerkala db.Date     `json:"tmt_kenaikan_gaji_berkala"`
+	TMTJabatan             db.Date     `json:"tmt_jabatan"`
+	GajiPokok              pgtype.Int4 `json:"gaji_pokok"`
+	Jabatan                string      `json:"jabatan"`
+	Pendidikan             string      `json:"pendidikan"`
+	TanggalLulus           db.Date     `json:"tanggal_lulus"`
+	KantorPembayaran       string      `json:"kantor_pembayaran"`
+	UnitKerjaIndukID       string      `json:"unit_kerja_induk_id"`
+	UnitKerjaInduk         string      `json:"unit_kerja_induk"`
+	Pejabat                string      `json:"pejabat"`
 }
