# services/kepegawaian/modules/riwayatkenaikangajiberkala/route.go
@@ -3,14 +3,13 @@ package riwayatkenaikangajiberkala
 import (
 	"net/http"
 
-	"github.com/jackc/pgx/v5/pgxpool"
 	"github.com/labstack/echo/v4"
 )
 
-func RegisterRoutes(e *echo.Echo, db *pgxpool.Pool, mwAuth echo.MiddlewareFunc) {
-	r := newRepository(db)
-	s := newService(r)
+func RegisterRoutes(e *echo.Echo, repo repository, mwAuth echo.MiddlewareFunc) {
+	s := newService(repo)
 	h := newHandler(s)
 
 	e.Add(http.MethodGet, "/v1/riwayat-kenaikan-gaji-berkala", h.list, mwAuth)
+	e.Add(http.MethodGet, "/v1/riwayat-kenaikan-gaji-berkala/:id/berkas", h.getBerkas, mwAuth)
 }
